src/test/ui/error-codes/E0268.stderr
error[E0268]: `break` outside of loop
  --> $DIR/E0268.rs:2:5
   |
LL |     break;
   |     ^^^^^ cannot break outside of a loop

error: aborting due to previous error

For more information about this error, try `rustc --explain E0268`.
